fix(PoweredBy): use correct svg (algolia/instantsearch-specs#54)
* fix(PoweredBy): use correct svgNote that this is a breaking change because they don't have `width: 70px` since that's way too smallAlso adds the svg for dark backgrounds with `.ais-PoweredBy--dark` (or should it be `--light`, slightly confused :p)

* chore: new logos

--- a/packages/instantsearch-specs/src/scss/themes/reset.scss
+++ b/packages/instantsearch-specs/src/scss/themes/reset.scss
@@ -71,8 +71,8 @@
 
 .ais-PoweredBy-logo {
   display: block;
-  width: 70px;
-  height: auto;
+  height: 1.2em;
+  width: auto;
 }
 
 .ais-RatingMenu-starIcon {
